# protokol

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
docs/: ADDING_A_POLITICIAN.md  ADDING_A_SOURCE.md  ARCHITECTURE.md  SETUP_TWEETS.md  app.js  case-cartheft.html  connections.html  control.html  directory.html  findings.html  home.html  index.html  leaderboard.html  leaderboard.js  ministers.html  mk.html  optimization-backlog.md  review.html  search.html  statistics.html  styles.css  submit.html
scripts/: add_figures.py  build_connections.py  build_minister_trends.py  build_search_index.py  export_catalog_series.py  export_leaderboard.py  export_leaderboard_from_findings.py  export_site_data.py  export_site_mk.py  export_tweets.py  extract_claims.py  fetch_ministers.py  find_candidates.py  find_candidates_parallel.py  init_db.py  integrate_cartheft_series.py  integrate_catalog_expansion.py  integrate_catalog_research.py  integrate_research_series.py  merge_agent_findings.py  merge_portfolio_to_catalog.py  refresh_site.py  run_candidate_factcheck.py  run_harvester.bat  scan_self_contradictions.py  scan_superlative_claims.py  seed_pilot.py  smoke_fetch.py  transcribe_interview.py  worker_harvest.py  worker_harvest_parallel.py  worker_tweets.py  write_status.py
tests/: conftest.py  test_adjudication.py  test_api.py  test_catalog.py  test_factcheck_findings.py  test_harvest_pipeline.py  test_leaderboard_export.py  test_matching.py  (+9 more)
(+309 files in other folders)
