[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knesset-osint"
version = "0.1.0"
description = "Objective OSINT platform tracking Israeli politicians against hard public data (pilot: Netanyahu / Likud)."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27",
    "SQLAlchemy>=2.0,<2.1",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "tenacity>=8.2",
    "neo4j>=5.18",
    "python-dotenv>=1.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "respx>=0.21", "ruff>=0.4"]
# RAG layer (Phase 2): uncomment when wiring the real contradiction detector.
# rag = ["sentence-transformers>=2.7", "pgvector>=0.2", "numpy>=1.26"]

[project.scripts]
knesset-osint = "knesset_osint.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
